<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/day_night_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.signale.schifffahrt.bootspruefung.schweiz.com.signale.schweiz.motorboot.segelschif.fragments.ThemeFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="1dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/representation"
                    android:textColor="@color/day_night_foreground"
                    android:textStyle="bold"
                    style="@style/TextView" />

                <RadioGroup
                    android:id="@+id/radioGroupDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_sidemenu"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        
                        android:layout_marginVertical="5dp"
                        android:maxLines="1"
                        android:padding="@dimen/margin_sidemenu"
                        android:text="@string/light_mode"
                        android:textColor="@color/day_night_foreground"
                        app:buttonTint="@color/day_night_foreground" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioNight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        
                        android:layout_marginVertical="5dp"
                        android:maxLines="1"
                        android:padding="@dimen/margin_sidemenu"
                        android:text="@string/dark_mode"
                        android:textColor="@color/day_night_foreground"
                        app:buttonTint="@color/day_night_foreground" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioSystem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        
                        android:layout_marginVertical="5dp"
                        android:maxLines="1"
                        android:padding="@dimen/margin_sidemenu"
                        android:text="@string/system_mode"
                        android:textColor="@color/day_night_foreground"
                        app:buttonTint="@color/day_night_foreground" />

                </RadioGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyAndSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/apply"
            style="@style/MyButtonHighlighted" />

    </LinearLayout>
</ScrollView>
