<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/bg_all"
    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/MyButtonHighlighted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/continue__"
        android:textColor="@color/day_night_background"
        android:visibility="visible"
        app:backgroundTint="@color/text_primary_to_white"
        app:icon="@drawable/ic_done"
        app:iconGravity="end"
        app:iconTint="@color/day_night_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="@color/text_primary_to_white"
        android:id="@+id/tvPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/btnContinue" />

    <TextView
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="@color/text_primary_to_white"
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="@+id/btnContinue"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:layout_marginBottom="20dp"
        android:textColor="@color/text_primary_to_white"
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/by_continue"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvPrivacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/groupContinue"
        app:constraint_referenced_ids="btnContinue,textView6,tvPrivacy,tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>